public class ContaCorrente extends Conta {
    public ContaCorrente(String numero, Cliente cliente) {
        super(numero, cliente);
    }
}
