public class ContaPoupanca extends Conta {
    public ContaPoupanca(String numero, Cliente cliente) {
        super(numero, cliente);
    }
}
